--- a/aboutme.html
+++ b/aboutme.html
@@ -8,9 +8,10 @@ Comp 20 -->
 
     <style> 
         body {
-            background-color: #416AFF;
+            
             color:black;
             text-align:center;
+            font-family: Impact, Charcoal, sans-serif;
         }
 
         div {
