--- a/hw2/about.html
+++ b/hw2/about.html
@@ -5,7 +5,8 @@ Comp20 ProEMS website about page-->
 <html>
 <head>
     <title>PRO EMS</title>
-    <link rel="stylesheet" type="text/css" href="StyleSheet.css">  
+    <link rel="stylesheet" type="text/css" href="StyleSheet.css"> 
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
 </head>
 
 <body>
@@ -18,6 +19,7 @@ Comp20 ProEMS website about page-->
     </nav> 
 
     <header>
+        <meta name=viewport content="width=device-width, initial-scale=1">
         <div class="container">
             <h1 class="title">PROFESSIONAL AMBULANCE AND OXYGEN SERVICE</h1> 
         </div>
