--- a/hw2/index.html
+++ b/hw2/index.html
@@ -22,6 +22,7 @@ Comp20 ProEMS website home page-->
             margin-right:auto;
         }
 
+
         #hbut {
             background-color: #0A10C4;
             color: #FFFFFF;
@@ -49,6 +50,7 @@ Comp20 ProEMS website home page-->
         </ul> 
     </nav> 
     <header>
+        <meta name=viewport content="width=device-width, initial-scale=1">
         <div class="container">
             <h1 class="title">PROFESSIONAL AMBULANCE AND OXYGEN SERVICE</h1> 
         </div>
