--- a/hw2/services.html
+++ b/hw2/services.html
@@ -12,7 +12,6 @@ Comp20 ProEMS website services page-->
 </head>
 
 <body>
-    <header>
 
     <nav>
         <ul>
@@ -21,6 +20,8 @@ Comp20 ProEMS website services page-->
             <li> <a href="about.html">About</a></li>
         </ul> 
     </nav> 
+    <header>
+        <meta name=viewport content="width=device-width, initial-scale=1">
 
         <div class="container">
             <h1 class="title">PROFESSIONAL AMBULANCE AND OXYGEN SERVICE</h1> 
